// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`while.js 1`] = `
====================================options=====================================
breakBeforeStatement: "loops"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
while (true) if (true) break

while (true) { if (true) break }

while (true) { console.log("test") }

=====================================output=====================================
while (true)
  if (true) break;

while (true) {
  if (true) break;
}

while (true) {
  console.log("test");
}

================================================================================
`;

exports[`while.js 2`] = `
====================================options=====================================
breakBeforeStatement: "always"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
while (true) if (true) break

while (true) { if (true) break }

while (true) { console.log("test") }

=====================================output=====================================
while (true)
  if (true)
    break;

while (true) {
  if (true)
    break;
}

while (true) {
  console.log("test");
}

================================================================================
`;
